Time: 7 ms (89.02%), Space: 47 MB (95.12%) - LeetHub